# ReferenceImageMapper

./: README.md  main.py  main_cluster_lot.py  requirements.txt  setup.cfg  setup.py
gluestick.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/reference_image_mapper/: main.py
