[metadata]
name = reference_image_mapper
version = 0.1
author = Dr UDM
author_email = dr.udm.darcy@gmail.com
maintainer = Dr UDM
description = Reference Image Mapper
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.6
install_requires =
    bitarray
    bokeh
    bokeh_sampledata
    build  
    holoviews 
    matplotlib 
    numpy
    setuptools
    omegaconf==2.2.*
    imageio
    opencv-python==4.7.0.*
    pandas
    panel
    plotly
    scikit-learn
    scipy
    seaborn
    shapely
    torch>=1.12
    torchvision>=0.13
    treelib==1.6.4
    tqdm
    pytlsd@https://github.com/iago-suarez/pytlsd.git
    gluestick@git+https://github.com/cvg/GlueStick.git 
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

 